[package]
name = "cdn-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Sunucusu (Web Server)
actix-web = "4"

# Dosya İşlemleri (File Handling)
actix-files = "0.6"

# JSON Serileştirme (JSON Serialization)
serde = { version = "1.0", features = ["derive"] }

# Asenkron Motor (Async Runtime)
tokio = { version = "1", features = ["full"] }

# Token İşlemleri (JWT Handling)
jsonwebtoken = "9"

# Çevre Değişkenleri (Env Vars)
dotenvy = "0.15"

# Yüksek Trafik İçin (For High Traffic)
# Rate Limiting (Oran Sınırlama)
actix-governor = "0.5"

# CPU Bilgisi (CPU Information)
num_cpus = "1.16"

# JSON işlemleri için (For JSON operations)
serde_json = "1.0"