[package]
name = "cdn-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Sunucusu (Web Server)
actix-web = "4"

# Dosya İşlemleri (File Handling)
actix-files = "0.6"

# JSON Serileştirme (JSON Serialization)
serde = { version = "1.0", features = ["derive"] }

# Asenkron Motor (Async Runtime)
tokio = { version = "1", features = ["full"] }

# Token İşlemleri (JWT Handling)
jsonwebtoken = "9"

# Çevre Değişkenleri (Env Vars)
dotenvy = "0.15"

# HashiCorp Vault İstemcisi (Vault Client)
vaultrs = "0.7"
vaultrs-login = "0.2"